# what2eat

./: .env  .gitignore  LICENSE  WARP.md  main.py  pyproject.toml  requirements.txt
src/: lifespan.py  main.py
src/collections/: model.py
src/core/: base_model.py  config.py  database.py  exception.py  redis_db.py
src/dishes/: model.py  repository.py  router.py  schema.py  service.py
