[project]
name = "what2eat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.21.0",
    "loguru>=0.7.3",
    "redis>=7.1.0",
    "psycopg[binary]>=3.2.13",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

# Ruff配置
[tool.ruff]
# 选择要使用的规则集
select = ["E", "W", "F", "I", "C90"]
# 排除的规则
ignore = ["E501"]
# 每行最大长度
line-length = 120
# 缩进宽度
indent-width = 4
# 排除的文件
exclude = [".venv", "__pycache__", "*.pyc", "*.pyi", ".git", "build", "dist"]

